--- a/style.css
+++ b/style.css
@@ -1,42 +1,64 @@
 *{
-    margin: 0;padding: 0;box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body{
     background-color: black;
-    
 }
-
 .container{
-width: 100vw;
-height: 100vh;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-.box1{
-    width: 100px;
-    height: 100px;
-    /* border-top: 5px solid aqua; */
-    /* border-top: 2px solid white;
-    border-right: 2px solid white; */
-    display:flex;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
     align-items: center;
     justify-content: center;
-    transition-property:transform;
-    transition-duration: 2s;
-    transition-timing-function: ease-in-out;
-    transition-delay: 1s;
-    box-sizing: border-box;
-    border-radius: 50%;
-    background-image: linear-gradient(blue,red,yellow);
+    
+    
 }
-.translate{
-    transform: rotateZ(-360deg);
-}
+.box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-.box2{
-    width: 90px;
-    height: 90px;
+}
+.inner1{
+    width: 200px;
+    height: 200px;
+    background-image: linear-gradient(200deg,blue,red,yellow);
+    border-radius: 35px;
+    box-shadow: 0px 0px 140px white;
+}
+.inner2{
+    width: 140px;
+    height: 140px;
+    background-color: white;
+    border-radius: 35px;
+}
+.inner3{
+    width: 120px;
+    height: 120px;
+    background-image: linear-gradient(200deg,blue,red,yellow);
+    border-radius: 35px;
+    position: relative;
+}
+.inner4{
+    width: 80px;
+    height: 80px;
+    background-color: white;
     border-radius: 50%;
-    background-color: black;
+}
+.inner5{
+    width: 60px;
+    height: 60px;
+    background-image: linear-gradient(200deg,blue,red,yellow);
+    border-radius: 50%;
+}
+.dot{
+    height: 15px;
+    width: 15px;
+    background-color: white;
+    position: absolute;
+    top: 13px;
+    right: 13px;
+    border-radius: 50%;
 }
